tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.out
warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 26 │       {i, s} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs:26:8: Main.to_string/1

    warning: variable "g" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 92 │             {g, res} = try do
    │              ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs:92:14: Main.reverse_k_nodes/2

    warning: variable "g" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 74 │             {g, res} = try do
    │              ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs:74:14: Main.reverse_k_nodes/2

    warning: variable "j" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 57 │           {group, j} = try do
    │                   ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs:57:19: Main.reverse_k_nodes/2

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 106 │       {i, res} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs:106:8: Main.reverse_k_nodes/2

    error: imported Kernel.to_string/1 conflicts with local function
    │
 10 │   def to_string(list) do
    │       ^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs:10:7: Main (module)

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/reverse_k_group.exs: cannot compile module Main (errors have been logged)